<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/mqtt_app_intro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_welcome"
        android:textSize="26sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.1"/>

    <TextView
        android:id="@+id/mqtt_app_intructions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="65dp"
        android:text="@string/app_instructions"
        android:textSize="23sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/mqtt_app_intro" />

    <TextView
        android:id="@+id/mqtt_button_intructions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_instructions"
        android:textSize="23sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/mqtt_app_intructions" />

    <TextView
        android:id="@+id/led1_status_on_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/led1_state_on"
        android:textSize="26sp"
        android:textColor="@color/led_on_color"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_bias="0.28"
        app:layout_constraintVertical_bias="0.45"
        android:visibility="invisible"/>

    <TextView
        android:id="@+id/led1_status_off_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/led1_status_text"
        android:textSize="26sp"
        android:textColor="@color/led_off_color"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_bias="0.28"
        app:layout_constraintVertical_bias="0.45"
        android:visibility="visible"/>

    <Button
        android:id="@+id/control_button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:background="@color/led_off_color"
        android:padding="8sp"
        android:text="@string/button1_text"
        android:textColor="@color/white"
        android:layout_marginTop="25dp"
        app:layout_constraintHorizontal_bias="0.25"
        app:layout_constraintLeft_toLeftOf="parent "
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/led1_status_off_textview" />

    <TextView
        android:id="@+id/led2_status_on_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/led1_state_on"
        android:textSize="26sp"
        android:textColor="@color/led_on_color"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_bias="0.72"
        app:layout_constraintVertical_bias="0.45"
        android:visibility="invisible"/>

    <TextView
        android:id="@+id/led2_status_off_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/led1_status_text"
        android:textSize="26sp"
        android:textColor="@color/led_off_color"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_bias="0.72"
        app:layout_constraintVertical_bias="0.45"
        android:visibility="visible"/>

    <Button
        android:id="@+id/control_button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:background="@color/led_off_color"
        android:padding="8sp"
        android:text="@string/button2_text"
        android:textColor="@color/white"
        android:layout_marginTop="25dp"
        app:layout_constraintLeft_toLeftOf="parent "
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.75"
        app:layout_constraintTop_toBottomOf="@id/led2_status_off_textview"/>

</androidx.constraintlayout.widget.ConstraintLayout>